<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorOffwhite"
        tools:context=".MainActivity"
        android:orientation="vertical" android:id="@+id/linearLayout2">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="198dp"
            android:id="@+id/linearLayout"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical">

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/add_work_day"
                  android:layout_marginTop="18dp"
                  android:textColor="#FFF"
                  android:textAlignment="center"
                  android:textSize="32sp"
                  android:padding="16dp"
                  android:fontFamily="@font/montserrat"/>

    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="504dp"
            android:background="@drawable/bg_item_list"
            android:paddingTop="22dp"
            android:layout_marginTop="-40dp"
            android:paddingBottom="8dp" android:id="@+id/linearLayout3">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" app:layout_constraintTop_toTopOf="@+id/editHeureFin"
                app:layout_constraintStart_toStartOf="@+id/editDateCreation"
                app:layout_constraintEnd_toStartOf="@+id/editDateCreation"
                app:layout_constraintBottom_toTopOf="@+id/editHeureFin">

            <TextView
                    android:id="@+id/txtTempsTotal"
                    android:textSize="24sp"
                    android:textColor="@color/colorRed"
                    android:visibility="visible"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/_00h_00_de_travail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="@+id/guideline" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/guideline4" android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
                    app:layout_constraintStart_toStartOf="parent" android:textAlignment="center"/>
            <Button
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/custom_calendar_button"
                    android:id="@+id/button4"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/guideline"
            />
            <TextView
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/creation_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/guideline"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"/>
            <TextView
                    android:id="@+id/editDateCreation"
                    android:textSize="20sp"
                    android:textColor="@color/colorRed"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/sample_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/guideline" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="@+id/guideline2"
                    android:textAlignment="center" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/button4"/>
            <TextView
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/shift_start"
                    android:fontFamily="@font/montserrat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="@+id/guideline4"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/guideline5"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp" android:id="@+id/textView5"
                    app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="1.0"/>
            <android.support.constraint.Guideline
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/guideline4" app:layout_constraintGuide_percent="0.2"/>
            <TextView
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/shift_end"
                    android:fontFamily="@font/montserrat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="@+id/guideline6" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/guideline7" android:id="@+id/textView6"
                    android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>
            <EditText
                    android:autofillHints="@string/shift_end"
                    android:inputType="datetime"
                    android:id="@+id/editHeureFin"
                    android:textSize="18sp"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:paddingStart="8dp"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/select_hour"
                    android:fontFamily="@font/montserrat"
                    android:textColorHint="#B5B5B5"
                    android:textColor="@color/colorBlack"
                    android:background="@drawable/input_bg_unselected"
                    android:layout_width="0dp"
                    android:layout_height="41dp" android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="@+id/guideline7"
                    app:layout_constraintBottom_toTopOf="@+id/guideline8" android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/buttonSelectHeureFin"/>
            <EditText
                    android:id="@+id/editHeureDebut"
                    android:textSize="18sp"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:paddingStart="8dp"
                    android:focusableInTouchMode="false"
                    android:hint="Sélectionnez une heure"
                    android:fontFamily="@font/montserrat"
                    android:textColorHint="#B5B5B5"
                    android:textColor="@color/colorBlack"
                    android:background="@drawable/input_bg_unselected"
                    android:layout_width="0dp"
                    android:layout_height="41dp" android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" app:layout_constraintBottom_toTopOf="@+id/guideline6"
                    android:layout_marginBottom="8dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="@+id/guideline5" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/buttonSelectHeureDebut"/>
            <Button
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/custom_hour_selector_button"
                    android:id="@+id/buttonSelectHeureDebut"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="@+id/guideline5" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/guideline6"/>
            <android.support.constraint.Guideline
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/guideline5" app:layout_constraintGuide_percent="0.28"/>
            <android.support.constraint.Guideline
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/guideline6" app:layout_constraintGuide_percent="0.4"/>
            <android.support.constraint.Guideline
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/guideline7" app:layout_constraintGuide_percent="0.48"/>
            <android.support.constraint.Guideline
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/guideline8" app:layout_constraintGuide_percent="0.6"/>
            <TextView
                    android:layout_width="0dp"
                    android:textColor="@color/colorRed"
                    android:id="@+id/txtErrorLog"
                    android:textSize="16sp"
                    android:visibility="invisible"
                    android:fontFamily="@font/montserrat"
                    android:layout_height="wrap_content"
                    android:text="Aucune action requise"
                    android:gravity="bottom|center"

                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="@+id/guideline9" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:textAlignment="center"/>
            <Button
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/custom_hour_selector_button"
                    android:id="@+id/buttonSelectHeureFin"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/guideline8" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="@+id/guideline7"/>
            <android.support.constraint.Guideline
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/guideline9" app:layout_constraintGuide_percent="0.92"/>
            <android.support.constraint.Guideline
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/guideline" app:layout_constraintGuide_percent="0.11"/>
            <android.support.constraint.Guideline
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/guideline2" app:layout_constraintGuide_percent="0.47"/>
        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_marginBottom="16dp"
            android:gravity="center|bottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <Button
                    android:id="@+id/btnEnregistrer"
                    android:text="Enregistrer"
                    android:textColor="#FFF"
                    android:background="@drawable/selector_button_enregistrer"
                    android:textSize="16sp"
                    android:fontFamily="@font/montserrat"
                    android:textAllCaps="false"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/btnAnnuler" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"/>
            <Button

                    android:id="@+id/btnAnnuler"
                    android:text="Annuler"
                    android:fontFamily="@font/montserrat"
                    android:textColor="#FFF"
                    android:background="@drawable/selector_button_cancel"
                    android:textSize="16sp"
                    android:textAllCaps="false"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnEnregistrer"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"/>
        </android.support.constraint.ConstraintLayout>
    </LinearLayout>


</LinearLayout>